--- a/_config.yml
+++ b/_config.yml
@@ -11,9 +11,9 @@ title                    : "David Lingenbrink"
 title_separator          : "-"
 name                     : &name "David Lingenbrink"
 description              : &description "PhD candidate at Cornell University"
-url                      : https://onionbubs.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : https://dlingenbrink.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
-repository               : "onionbubs.github.io"
+repository               : "dlingenbrink.github.io"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
 breadcrumbs              : false # true, false (default)
 words_per_minute         : 160
