--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "David Lingenbrink"
-  avatar           : "profile.png"
+  avatar           : "bio-photo.jpg"
   bio              : "PhD candidate at Cornell University"
   location         : "Ithaca, NY"
   employer         :
