--- a/_config.yml
+++ b/_config.yml
@@ -85,10 +85,8 @@ author:
   bio              : "PhD candidate at Cornell University"
   location         : "Ithaca, NY"
   employer         :
-  pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
-  googlescholar    : "http://yourfullgooglescholarurl.com"
-  email            :
-  researchgate     :  # example: "https://www.researchgate.net/profile/yourprofile"
+  googlescholar    :
+  email            : "dal299@cornell.edu"
   uri              :
   bitbucket        :
   codepen          :
