--- a/_config.yml
+++ b/_config.yml
@@ -84,7 +84,7 @@ author:
   bio              : "PhD candidate at Cornell University"
   location         : "Ithaca, NY"
   employer         :
-  googlescholar    : "http://yourfullgooglescholarurl.com"
+  googlescholar    : 
   email            : "dal299@cornell.edu"
   uri              :
   bitbucket        :
