--- a/_config.yml
+++ b/_config.yml
@@ -10,8 +10,8 @@ locale                   : "en-US"
 title                    : "David Lingenbrink"
 title_separator          : "-"
 name                     : &name "David Lingenbrink"
-description              : &description "PhD candidate at Cornell University"
-url                      : https://dlingenbrink.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+description              : &description "Software Engineer at Bloomberg, LLC"
+url                      : davidlingenbrink.com # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "dlingenbrink.github.io"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
@@ -84,7 +84,7 @@ author:
   bio              : "PhD candidate at Cornell University"
   location         : "Ithaca, NY"
   employer         :
-  googlescholar    : 
+  googlescholar    :
   email            : "dal299@cornell.edu"
   uri              :
   bitbucket        :
