--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ title                    : "David Lingenbrink"
 title_separator          : "-"
 name                     : &name "David Lingenbrink"
 description              : &description "Software Engineer at Bloomberg, LLC"
-url                      : davidlingenbrink.com # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : https://dlingenbrink.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "dlingenbrink.github.io"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
