--- a/_config.yml
+++ b/_config.yml
@@ -82,8 +82,8 @@ analytics:
 author:
   name             : "David Lingenbrink"
   avatar           : "bio-photo.jpg"
-  bio              : "PhD candidate at Cornell University"
-  location         : "Ithaca, NY"
+  bio              : "Software Engineer at Bloomberg, LLC"
+  location         : "New York, NY"
   employer         :
   googlescholar    :
   email            : "dal299@cornell.edu"
